crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__bound_nullary.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- trial ANF input\\n{}\\n--- trial folded Core\\n{}\\n--- trial cleaned Core\\n{}\\n--- trial UPLC before\\n{}\\n--- trial UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let subject#1 : @constr[0]() = constr 0 in
case@Tag subject#1 of
  1 -> 42
  0 -> 21
--- unoptimized UPLC
(program 1.1.0
  [(lam subject_1 (case subject_1 (con integer 21) (con integer 42))) (constr 0)])
--- optimized Core
21
--- optimized UPLC
(program 1.1.0 (con integer 21))
--- isolated pass
--- trial ANF input
let subject#1 : @constr[0]() = constr 0 in
case@Tag subject#1 of
  1 -> 42
  0 -> 21
--- trial folded Core
let subject#1 : @constr[0]() = constr 0 in
21
--- trial cleaned Core
21
--- trial UPLC before
(program 1.1.0
  [(lam subject_1 (case subject_1 (con integer 21) (con integer 42))) (constr 0)])
--- trial UPLC after
(program 1.1.0 (con integer 21))
--- result
(con integer 21)
--- logs
[]
