crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__bound_sparse.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(before), pretty(after))"
---
--- before
let subject#1 : @constr[0]() = constr 0 in
case@Tag subject#1 of
  59 -> 42
--- after
let subject#1 : @constr[0]() = constr 0 in
case@Tag subject#1 of
  59 -> 42
--- errors
InvalidCase("tag branches must cover consecutive unique tags")
InvalidCase("tag branches must cover consecutive unique tags")
